Add blacksmith to jobconfig.toml

--- a/jobconfig.toml
+++ b/jobconfig.toml
@@ -291,3 +291,9 @@
 "Required Account Age" = 7
 "Spawn Positions" = 1
 "Total Positions" = 1
+
+[BLACKSMITH]
+"Playtime Requirements" = 0
+"Required Account Age" = 0
+"Spawn Positions" = 1
+"Total Positions" = 1
