--- a/word_filter.toml
+++ b/word_filter.toml
@@ -4,81 +4,95 @@
 
 # Anything in here will be blocked from IC interactions, dead chat, and OOC
 [shared]
-"ligger" = "Please find an alternative slur."
-"ligga" = "Please find an alternative slur."
-"nigger" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"niglet" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n!ga" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n!ger" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n!gga" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n!gger" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n1ga" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"n1gga" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"niger" = "If you're playing this game, in all likelihood you're white. Please help make the server a better place and don't say this."
-"wigger" = "What even are you saying? Don't say this."
-"retard" = "This message is considered insensitive to people like you. Please treat others the way you want to be treated."
-"retarded" = "This message is considered insensitive to people like you. Please treat others the way you want to be treated."
-"tard" = "This message is considered insensitive to people like you. Please treat others the way you want to be treated."
-"tarded" = "This message is considered insensitive to people like you. Please treat others the way you want to be treated."
-"Wetback" = "What even?"
-"Spic" = "What even?"
-"Spick" = "What even?"
-"Spaz" = "What even?"
-"Spazz" = "What even?"
-"Enuch" = "Huh?"
-"He-she" = "Please use the appropriate term."
-"She-he" = "Please use the appropriate term."
-"Coon" = "Please use a more appropriate term."
-"Chink" = "Please use a more appropriate term."
-"Nip" = "Please use a more appropriate term."
-"Raghead" = "Please use a more appropriate term."
-"Tar-baby" = "Please use a more appropriate term."
-"Downy" = "Use a more appropriate term, please."
-"Downie" = "Use a more appropriate term, please."
-"Downer" = "Use a more appropriate term, please."
-"Midget" = "Just short is fine."
+"ligger" = "This is hard-filtered due to its proximity to a slur used to refer to POC, and is considered more suitable for the /tg/ side of SS13 than anyone's comfortable with. Please do not say this."
+"ligga" = "This is hard-filtered due to its proximity to a slur used to refer to POC, and is considered more suitable for the /tg/ side of SS13 than anyone's comfortable with. Please do not say this."
+"nigger" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"niglet" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"nigga" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n!ga" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n!ger" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n!gga" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n!gger" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n1ga" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"n1gga" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"niger" = "This term is a derogatory term used to refer to African-Americans, or generally, people of a darker complexion. It was frequently used by plantation owners and other such Colonial forces to instill a sense of inferiority in these people. Please help make the world a better place and find a better term."
+"wigger" = "This term seems to be the inverse of a derogatory term used to refer to POC. It doesn't carry any such history, but it is filtered for a reason."
+"retard" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"retards" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"retarded" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"retardation" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"retardations" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"tard" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"tards" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"tarded" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"tardation" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"tardations" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Downy" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Downie" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Downer" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Wetback" = "Wetback is used a negative pejorative to refer to foreign nationals in the U.S., most commonly Mexicans. While it's certainly a cool-sounding term, it's not okay to say this here."
+"Spic" = "Spic is a derogatory term used to refer to Mexican and Italian men. It shouldn't be said here."
+"Spaz" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Spazz" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"autist" = "This is an outdated pejorative term for mentally handicapped people. If you see no issue with saying this, perhaps you shouldn't be playing here."
+"Enuch" = "Eunuchs, or most commonly mispelled 'Enuchs,' are a term for an ineffectual or powerless man, and in more modern use, has become a transphobic slur. It shouldn't be used here."
+"Eunuch" = "Eunuchs, or most commonly mispelled 'Enuchs,' are a term for an ineffectual or powerless man, and in more modern use, has become a transphobic slur. It shouldn't be used here."
+"He-she" = "He-she, or she-he, is considered a transphobic slur. Please don't use it here."
+"She-he" = "She-he, or he-she, is considered a transphobic slur. Please don't use it here."
+"Coon" = "This is an extremely offensive way to refer to POC. Please don't use it here."
+"Tar-baby" = "This is an extremely offensive way to refer to POC. Please don't use it here."
+"Raghead" = "Raghead is a slur used to refer to Middle-Eastern ethnic groups. Please don't use it here."
+"kike" = "Kike is an ethnic slur used to refer to Jewish people. It shouldn't be used here."
+"Gypsy" = "Gypsy is an ethnic slur used to refer to the European Roma people. Educate yourself and do not say this."
+"tranny" = "This term is widely considered to be a slur used to refer to trans people. You know where you are, don't say this."
+"Midget" = "This term, Midget, comes from, 'a tiny biting insect.' and is considered to be pejorative due to this. It's not okay to say this here."
 "furfag" = "You're literally on a furry server. Why? Go play TGstation or something."
 "furfaggot" = "You're literally on a furry server. Why? Go play TGstation or something."
 "furfaggit" = "You're literally on a furry server. Why? Go play TGstation or something."
-"kike" = "You're literally on a furry server. Why? Go play TGstation or something."
-"autist" = "This is SS13, we're all autistic. If you have no issue with saying this, look in the mirror. You may be one too."
-"nigga" = "You risk being banned if you use this term improperly. Be considerate of others."
-"Gypsy" = "Please be considerate when using this term."
-"tranny" = "You risk being dealt with administratively if your use of this term offends."
 "blockedinshared" = "This message is not allowed anywhere, please use a different weird test phrase."
 
 # Anything in here is blocked just from IC interactions, such as chat or names, but is allowed in dead chat and OOC
 [ic]
-"antag" = "Please find an alternative phrase."
-"Deathsquad" = "This is not allowed to be said in-character. Please refer to them by whatever name you see first, such as 'Code Delta ERT'"
-"tot" = "Please refer to these as Syndicate agents."
-"Tatortot" = "Please refer to these as Syndicate agents."
-"Tatertot" = "Please refer to these as Syndicate agents."
+"antag" = "This is not an in-character phrase, and thus should not be said in-character."
+"tot" = "Due to excessive use, tot, and variations of, are banned for use to refer to Syndicate agents. Do your part to raise the roleplay standard."
+"Tatortot" = "Due to excessive use, tot, and variations of, are banned for use to refer to Syndicate agents. Do your part to raise the roleplay standard."
+"Tatertot" = "Due to excessive use, tot, and variations of, are banned for use to refer to Syndicate agents. Do your part to raise the roleplay standard."
 "blockedinic" = "This message is not allowed IC, please use a different weird test phrase."
 
 # Anything in here is blocked from all IC interactions *except* PDAs.
 # On /tg/, netspeak is OK in PDAs.
 [ic_outside_pda]
-":3" = "Netspeak not allowed in-character."
-":)" = "Netspeak not allowed in-character."
-"o_o" = "Netspeak not allowed in-character."
-"0_0" = "Netspeak not allowed in-character."
-">_>" = "Netspeak not allowed in-character."
-"<_<" = "Netspeak not allowed in-character."
+":3" = "Netspeak is not allowed in-character."
+":)" = "Netspeak is not allowed in-character."
+"o_o" = "Netspeak is not allowed in-character."
+"0_0" = "Netspeak is not allowed in-character."
+">_>" = "Netspeak is not allowed in-character."
+"<_<" = "Netspeak is not allowed in-character."
 "<(0_0<)" = "Kirby dancing is strictly prohibited on this server."
 
 # Anything in here will warn the player if said in IC, dead chat or OOC, the player must approve their message to send it
 [soft_shared]
-"rape" = "You risk being banned or prosecuted IC if you use this term capriciously."
-"faggot" = "This is considered insensitive to people like you, please use it carefully."
-"fag" = "This is considered insensitive to people like you, please use it carefully."
-"fagg" = "This is considered insensitive to people like you, please use it carefully."
-"testsoftblocks" = "You risk being banned if this term is used improperly."
+"rape" = "This term has been used for 'jokes' that lead to the harm of others. It's easy to forget that there are people who have negative experiences with sexual assault. If you use it incorrectly, you risk being banned."
+"faggot" = "This is a homophobic slur. It is soft-filtered only because of its use for kink purposes. Any use other than that, or a use that serves that purpose maliciously or incorrectly, risks earning you a ban."
+"fag" = "This is a homophobic slur. It is soft-filtered only because of its use for kink purposes. Any use other than that, or a use that serves that purpose maliciously or incorrectly, risks earning you a ban."
+"fagg" = "This is a homophobic slur. It is soft-filtered only because of its use for kink purposes. Any use other than that, or a use that serves that purpose maliciously or incorrectly, risks earning you a ban."
+"Cope" = "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Coping" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Seethe" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Seething" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Mald" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Malding" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Skill issue" =  "Bubberstation is trying to create a chill environment, and this has shown to go against that on multiple occasions. Just in case, your message has been logged."
+"Chink" = "Chink is an ethnic slur used to refer to a person of Chinese descent. If you use it in this way, you risk being banned."
+"Nip" = "Nip is an ethnic slur used against people of Japanees descent and origin. If you use it in this way, you risk being banned."
+"Spick" = "Spick is used as an ethnic slur, referring to people from Spanish-speaking countries, or even earlier, Italian ones. You risk being banned if you use it for this purpose."
+"testsoftblocks" = "I messed up what was here before."
 
 # Anything in here will warn the player if said ICly, but is allowed in dead chat and OOC, the player must approve their message to send it
 [soft_ic]
-"Changeling" = "These are not allowed to be referred to in-character unless you hear it already. Expect to be black-bagged if you bring it up."
-"ling" = "These are not allowed to be referred to in-character unless you hear it already. Expect to be black-bagged if you bring it up."
+"Changeling" = "As of the most recent Antagonist policy, Changelings are unknown to the station as a whole, and are not allowed to be referred to as such as a result. Referring to them may result in IC punishment, or administrative action."
+"ling" = "As of the most recent Antagonist policy, Changelings are unknown to the station as a whole, and are not allowed to be referred to as such as a result. Referring to them may result in IC punishment, or administrative action."
+"Deathsquad" = "As of the most recent Antagonist policy, the Deathsquad is not allowed to be known to anyone on-station. Referring to them may result in IC punishment, or administrative action."
 "testsofterblocks" = "This term is commonly considered OOC, only use it with context."
 
 # Anything in here will warn the player if said ICly *except* PDAs, the player must approve their message to send it
