Update to what's on live servers

--- a/word_filter.toml
+++ b/word_filter.toml
@@ -29,7 +29,8 @@
 "tardations" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
 "Downy" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
 "Downie" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
-"Downer" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Downsie" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
+"Mongoloid" = "This term is a pejorative used to refer to people who are mentally handicapped, or from Mongolia. It was an old medical term that has since fallen out of fashion. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
 "Wetback" = "Wetback is used a negative pejorative to refer to foreign nationals in the U.S., most commonly Mexicans. While it's certainly a cool-sounding term, it's not okay to say this here."
 "Spic" = "Spic is a derogatory term used to refer to Mexican and Italian men. It shouldn't be said here."
 "Spaz" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
@@ -86,6 +87,7 @@
 "Chink" = "Chink is an ethnic slur used to refer to a person of Chinese descent. If you use it in this way, you risk being banned."
 "Nip" = "Nip is an ethnic slur used against people of Japanees descent and origin. If you use it in this way, you risk being banned."
 "Spick" = "Spick is used as an ethnic slur, referring to people from Spanish-speaking countries, or even earlier, Italian ones. You risk being banned if you use it for this purpose."
+"Downer" = "This term is a pejorative used to refer to people who are mentally handicapped. It has fallen out of fashion due to developing negative meanings. People who use this term are seen as ignorant to the value of being polite. Perhaps you shouldn't be here if you match that description."
 "testsoftblocks" = "I messed up what was here before."
 
 # Anything in here will warn the player if said ICly, but is allowed in dead chat and OOC, the player must approve their message to send it
